--- a/Frontend/src/Components/Create/CreateQuiz.css
+++ b/Frontend/src/Components/Create/CreateQuiz.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: linear-gradient(to right, #a1c4fd, #c2e9fb);
   align-items: center;
-  height: 100vh;
-  background-color: #f8f9fa;
+  font-size: 18px;
+  font-weight: 600;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   padding-bottom: 40px;
 }
@@ -17,35 +18,34 @@
   width: 80%;
   height: 525px;
   max-width: 1200px;
-  background-color: #ffffff;
+  background-color: #e0eafc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  border-radius: 40px;
   overflow: hidden;
 }
 
-/* BigDiv header styles */
+
 .quiz-header {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #2c3e50;
   font-size: 2.5rem;
   font-weight: bold;
 }
 .quiz-subheader {
   text-align: center;
   margin-bottom: 20px;
-  color: #333;
+  color: #2c3e50;
   font-size: 1.5rem;
 }
 
-/* BigDiv section styles */
 .BigDiv01 {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 40px;
   height: 50%;
-  background-color: #e9ecef;
+  background-color: #e0eafc;
   color: #333;
 }
 
@@ -56,11 +56,10 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  background-color: #dee2e6;
+  background-color: #e0eafc;
   text-align: center;
 }
 
-/* BigDiv grid section styles */
 .BigDiv02 {
   display: flex;
   flex-direction: row;
@@ -75,16 +74,19 @@
   align-items: center;
   width: 25%;
   height: 100%;
-  background-color: #f0f1f0;
+  background-color: #e0eafc;
   border-radius: 20px;
-  margin: 0 10px; /* Add space between the labels */
-  cursor: pointer; /* Ensures the entire div is clickable */
+  border-width: 2px;
+  border-style: solid;
+  border-color: #2c3e50;
+  margin: 0 10px; 
+  cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .BigDiv0201.selected {
-  background-color: #090089; /* Change the background color when selected */
-  color: #fff; /* Optional: Change text color for better contrast */
+  background-color: #090089; 
+  color: #fff; 
 }
 
 .BigDiv020101 {
@@ -93,11 +95,14 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #2c3e50;
+  border-radius: 20px;
 }
 
-/* Button styling */
 .button-next {
-  background-color: #007bff;
+  background-color: #2c3e50;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -126,11 +131,11 @@
 }
 
 .BigDiv0201.correct {
-  background-color: #28a745; /* Green for correct */
+  background-color: #28a745;
   color: #fff;
 }
 
 .BigDiv0201.incorrect {
-  background-color: #dc3545; /* Red for incorrect */
+  background-color: #dc3545; 
   color: #fff;
 }
