--- a/Frontend/src/Components/Home/Button.css
+++ b/Frontend/src/Components/Home/Button.css
@@ -4,7 +4,8 @@
   
   box-sizing: border-box;
   border-radius: 10px;
-  color: #0b0a0a;
+  background: #2c3e50;
+  color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
