--- a/Frontend/src/Components/leaderboard/LeaderBoard.css
+++ b/Frontend/src/Components/leaderboard/LeaderBoard.css
@@ -1,26 +1,23 @@
+/* LeaderBoard.css */
+
 .leaderboard-container {
   padding: 20px;
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4; /* Light background for contrast */
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+  min-height: 100vh;
+  color: #333;
 }
 
 .leaderboard-header {
-  font-family: 'Arial Rounded MT', Arial, sans-serif;
-  font-size: 2rem; /* Larger header font size */
+  font-size: 2.5rem;
   font-weight: bold;
-  color: #333; /* Darker text color for better readability */
-  margin-bottom: 20px;
-  text-align: center; /* Center-align the header */
-}
-
-.top-image {
-  height: 70px;
-  border-radius: 10px;
-  transition: transform 0.6s ease, box-shadow 0.7s ease;
+  color: #090089; /* Matching theme color */
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .filters {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   display: flex; /* Use flexbox for side-by-side layout */
   justify-content: center; /* Center the filters */
   gap: 20px; /* Add space between filters */
@@ -46,30 +43,41 @@
 }
 
 .table {
-  width: 100%;
+  width: 80%;
   border-collapse: collapse;
-  margin-top: 20px;
+  margin: 0 auto;
+  border: 1px solid #ddd;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #f9f9f9;
+}
+
+.table thead {
+  background-color: #090089; /* Matching theme color */
 }
 
 .table thead th {
+  background-color: #090089;
   border-bottom: 2px solid #ddd;
   padding: 12px;
-  text-align: left;
-  background-color: #f8f8f8; /* Light background for header */
+  text-align: center;
+  color: #fff;
 }
 
 .table tbody td {
   border-bottom: 1px solid #ddd;
   padding: 12px;
-  background-color: #fff; /* White background for rows */
+  color:#34495e;
+  background-color:#c2e9fb ; /* White background for rows */
 }
 
 .table tbody tr:nth-child(even) {
-  background-color: #f9f9f9; /* Alternating row colors */
+  background-color: #f0f0f0; /* Alternating row colors */
 }
 
 .table tbody tr:hover {
-  background-color: #e0e0e0; /* Hover effect for rows */
+  background-color: #e5e5e5; /* Hover effect for rows */
 }
 
 .table th, .table td {
