--- a/Frontend/src/Components/login_signup/Modal.css
+++ b/Frontend/src/Components/login_signup/Modal.css
@@ -20,6 +20,7 @@
   .modal-close {
     background: none;
     border: none;
+    color: aliceblue;
     font-size: 1.5rem;
     position: absolute;
     top: 10px;
